@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/shop.c: handle "no money" case when player tries to exit shop.
+---
 Fix a crash with object handling by plugins.
  cfpython/cfpython_map.c: don't assume op exists after inserting in map.
  Ryo 2007-02-15
